Fix #59: Stretched content

--- a/src/style/widescreenMode.less
+++ b/src/style/widescreenMode.less
@@ -408,7 +408,6 @@ body[class] {
           justify-content: center;
           max-width: 100%;
           max-height: 100%;
-          width: auto !important;
 
           .item-image-thumb {
             display: none !important;
